crates/tracing/tests/ui/instrument/ret_report_requires_result.rs
use miden_node_tracing::instrument;

#[instrument(rpc: ret, report)]
fn foo() {}

fn main() {}
